# HSE_LAB_2

./: CMakeLists.txt  CMakeUserPresets.json  README.md  benches.txt
src/: .clang-format  contest_solution.cpp  generators.cpp  generators.hpp  linear_benches.hpp  main.cpp  map_benches.hpp  segtree_benches.hpp  utils.hpp
